2013-04-22 c-0-1-17
  (add) RPi Keyboard Layout support
  
2013-04-20 v-0.1.16
  (change) optimize update thread
  
2013-04-18 v-0.1.15
  (change) new update function
  (change) wait for bt adapter loop reduced to 3
  
2013-04-15 v-0.1.14
  (add) save hostname
  (add) help hints

2013-04-09 v-0.1.13
  (add) begin update v2 development 
  
2013-04-09 v-0.1.12
  (add) loop to wait for bluez to find the bt adapter 
  
2013-04-08 v-0.1.11
  (fix) bluetooth error on enable / disable
  (change) Bluetooth Agent redesign, monitor dbus always.
  (change) restore: delete file on abort. ask for reboot on success

2013-04-04 v-0.1.10
  (fix) delete backup file on abort
  (change) backup / restore write tar file. bzip is bit slow

2013-04-01 v-0.1.9
  (change) backup / restore rebuild
  
2013-04-01 v-0.1.8
  (fix) autoupdate
  
2013-04-01 v-0.1.7
  (add) license headers
  (change) use hd-idle for hdd spindown
  
2013-03-30 v-0.1.6 
  (fix) hide ssh service if kernel parameter is set (read file)
  
2013-03-30 v-0.1.5 
  (add) hide ssh service if kernel parameter is set 
  
2013-03-27 v-0.1.4 
  (fix) enable / disable | wifi / ethernet 
  
2013-03-25 v-0.1.3
  (fix) Move Update Files after extract
  (fix) network service autoconnect
  (add) start service addon on startup

2013-03-11 v-0.1.2
  (add) Info Text Placeholder added in Strings.xml
  (add) Display InfoText Placeholder in bottom

2013-03-08 v-0.1.1
  (change) about dialog change donate text
  (change) connman context menu order
  
2013-03-08 v-0.1.0
  (change) about dialog rework
  
2013-03-08 v-0.0.29
  (change) Check for updates every 6 hours
  (add) Network wait 
  (change) extract updates to /storage/.xbmc/temp and move on complete
  (add) backup .xbmc and .config
  (add) restore from zip
  (change) vpn now works with .config files found in /storage/.config/config-vpn
  (add) oe module copy_file added
  (fix) set_busy fixed
  (fix) enable / disable ethernet

2013-02-22 v-0.0.28